# shortlinky

./: .flaskenv  LICENSE  README.md  pyproject.toml  requirements.txt  wsgi.py
shortlinky/: __init__.py  db.py  decorators.py  routes.py  schema.sql  shortlinky.sqlite3
shortlinky/templates/: 404.html  base.html  index.html  login.html
