[tool.poetry]
name = "shortlinky"
version = "0.1.0"
description = "Flask Based URL shortener"
authors = ["Fathin Luqman Tantowi <fltfathin@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
flask-sqlalchemy = "^2.4.4"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
poetry = "^1.1.4"
python-dotenv = "^0.15.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
